kubernetes/apps/observability/greptimedb/logs/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: greptimedb-logs
spec:
  hostnames:
    - greptimedb-logs.marcocondrache.com
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: greptimedb-logs-standalone
          port: 4000
